--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "docx-preview": "^0.3.5",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
