--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,12 +14,18 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "docx-preview": "^0.3.5",
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "sweetalert2": "^11.23.0"
+    "sweetalert2": "^11.23.0",
+    "chart.js": "^4.4.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
