--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,10 +13,13 @@
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
-    "docx-preview": "^0.3.5",
+    "chart.js": "^4.4.7",
+    "docx-preview": "^0.3.7",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "mammoth": "^1.11.0",
+    "pdfmake": "^0.2.20",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.2.0",
@@ -24,7 +27,6 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
     "sweetalert2": "^11.23.0",
-    "chart.js": "^4.4.7",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
