--- a/Backend/.env
+++ b/Backend/.env
@@ -6,5 +6,5 @@ DB_PORT=5000
 
 JWT_SECRET=4](\TNm8_13zd>f:s=£QPh&1OCQ3%@5|!7MzgH}gt
 
-EMAIL_USER=neotech0100@gmail.com
-EMAIL_PASS=krqu bajn vfoo rfok
+EMAIL_USER=laboratorio.clinico.avila.sv@gmail.com
+EMAIL_PASS=snin eavl bdqr qgpf
