--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,4 +1,17 @@
 {
+   "name": "backend",
+
+  "version": "1.0.0",
+
+  "main": "start.js",
+
+  "bin": "start.js",
+
+  "scripts": {
+
+    "start": "node start.js"
+
+  },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -12,5 +25,11 @@
     "pdfkit": "^0.15.0",
     "mammoth": "^1.4.19",
     "libreoffice-convert": "^1.4.0"
+  },
+  "pkg": {
+    "assets": [
+      "../Frontend/dist/**/*",
+      "node_modules/es-get-iterator/**"
+    ]
   }
 }
