Update package.json to include new assetslogo

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,6 +30,7 @@
     "assets": [
       "../Frontend/dist/**/*",
       "node_modules/es-get-iterator/**"
-    ]
+    ],
+     "icon": "../Frontend/src/assets/favicon.ico"
   }
 }
